--- a/properties/src/org/netbeans/modules/properties/BundleEditPanel.form
+++ b/properties/src/org/netbeans/modules/properties/BundleEditPanel.form
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
 <Form version="1.0" type="org.netbeans.modules.form.forminfo.JPanelFormInfo">
-  <SyntheticProperties>
-    <SyntheticProperty name="designerSize" type="java.awt.Dimension" value="-84,-19,0,5,115,114,0,18,106,97,118,97,46,97,119,116,46,68,105,109,101,110,115,105,111,110,65,-114,-39,-41,-84,95,68,20,2,0,2,73,0,6,104,101,105,103,104,116,73,0,5,119,105,100,116,104,120,112,0,0,1,-121,0,0,2,31"/>
-  </SyntheticProperties>
+  <AuxValues>
+    <AuxValue name="designerSize" type="java.awt.Dimension" value="-84,-19,0,5,115,114,0,18,106,97,118,97,46,97,119,116,46,68,105,109,101,110,115,105,111,110,65,-114,-39,-41,-84,95,68,20,2,0,2,73,0,6,104,101,105,103,104,116,73,0,5,119,105,100,116,104,120,112,0,0,1,-121,0,0,2,31"/>
+  </AuxValues>
 
   <Layout class="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout"/>
   <SubComponents>
@@ -29,7 +29,6 @@
               <Properties>
                 <Property name="cellSelectionEnabled" type="boolean" value="true"/>
               </Properties>
-
               <AuxValues>
                 <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new BundleTable();"/>
               </AuxValues>
@@ -49,11 +48,11 @@
       <SubComponents>
         <Component class="javax.swing.JLabel" name="commentLabel">
           <Properties>
-            <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
-              <ResourceString bundle="org/netbeans/modules/properties/Bundle.properties" key="LBL_CommentLabel" replaceFormat="NbBundle.getBundle({sourceFileName}.class).getString(&quot;{key}&quot;)"/>
-            </Property>
             <Property name="labelFor" type="java.awt.Component" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
               <Connection component="textComment" type="bean"/>
+            </Property>
+            <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
+              <ResourceString bundle="org/netbeans/modules/properties/Bundle.properties" key="LBL_CommentLabel" replaceFormat="NbBundle.getBundle({sourceFileName}.class).getString(&quot;{key}&quot;)"/>
             </Property>
           </Properties>
           <Constraints>
@@ -73,8 +72,8 @@
           <SubComponents>
             <Component class="javax.swing.JTextArea" name="textComment">
               <Properties>
-                <Property name="editable" type="boolean" value="false"/>
                 <Property name="lineWrap" type="boolean" value="true"/>
+                <Property name="editable" type="boolean" value="false"/>
                 <Property name="rows" type="int" value="3"/>
                 <Property name="enabled" type="boolean" value="false"/>
               </Properties>
@@ -83,11 +82,11 @@
         </Container>
         <Component class="javax.swing.JLabel" name="valueLabel">
           <Properties>
-            <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
-              <ResourceString bundle="org/netbeans/modules/properties/Bundle.properties" key="LBL_ValueLabel" replaceFormat="NbBundle.getBundle({sourceFileName}.class).getString(&quot;{key}&quot;)"/>
-            </Property>
             <Property name="labelFor" type="java.awt.Component" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
               <Connection component="textValue" type="bean"/>
+            </Property>
+            <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
+              <ResourceString bundle="org/netbeans/modules/properties/Bundle.properties" key="LBL_ValueLabel" replaceFormat="NbBundle.getBundle({sourceFileName}.class).getString(&quot;{key}&quot;)"/>
             </Property>
           </Properties>
           <Constraints>
@@ -107,8 +106,8 @@
           <SubComponents>
             <Component class="javax.swing.JTextArea" name="textValue">
               <Properties>
-                <Property name="editable" type="boolean" value="false"/>
                 <Property name="lineWrap" type="boolean" value="true"/>
+                <Property name="editable" type="boolean" value="false"/>
                 <Property name="rows" type="int" value="3"/>
                 <Property name="enabled" type="boolean" value="false"/>
               </Properties>
@@ -135,7 +134,6 @@
               <ResourceString bundle="org/netbeans/modules/properties/Bundle.properties" key="LBL_AddPropertyButton" replaceFormat="NbBundle.getBundle({sourceFileName}.class).getString(&quot;{key}&quot;)"/>
             </Property>
           </Properties>
-
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="addButtonActionPerformed"/>
           </Events>
@@ -154,7 +152,6 @@
               <ResourceString bundle="org/netbeans/modules/properties/Bundle.properties" key="LBL_RemovePropertyButton" replaceFormat="NbBundle.getBundle({sourceFileName}.class).getString(&quot;{key}&quot;)"/>
             </Property>
           </Properties>
-
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="removeButtonActionPerformed"/>
           </Events>
@@ -174,7 +171,6 @@
               <ResourceString bundle="org/netbeans/modules/properties/Bundle.properties" key="CTL_AutoResize" replaceFormat="NbBundle.getBundle({sourceFileName}.class).getString(&quot;{key}&quot;)"/>
             </Property>
           </Properties>
-
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="autoResizeCheckActionPerformed"/>
           </Events>
