--- a/properties/src/org/netbeans/modules/properties/FindPanel.form
+++ b/properties/src/org/netbeans/modules/properties/FindPanel.form
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
 <Form version="1.0" type="org.netbeans.modules.form.forminfo.JPanelFormInfo">
-  <SyntheticProperties>
-    <SyntheticProperty name="designerSize" type="java.awt.Dimension" value="-84,-19,0,5,115,114,0,18,106,97,118,97,46,97,119,116,46,68,105,109,101,110,115,105,111,110,65,-114,-39,-41,-84,95,68,20,2,0,2,73,0,6,104,101,105,103,104,116,73,0,5,119,105,100,116,104,120,112,0,0,1,44,0,0,1,-112"/>
-  </SyntheticProperties>
+  <AuxValues>
+    <AuxValue name="designerSize" type="java.awt.Dimension" value="-84,-19,0,5,115,114,0,18,106,97,118,97,46,97,119,116,46,68,105,109,101,110,115,105,111,110,65,-114,-39,-41,-84,95,68,20,2,0,2,73,0,6,104,101,105,103,104,116,73,0,5,119,105,100,116,104,120,112,0,0,1,44,0,0,1,-112"/>
+  </AuxValues>
 
   <Layout class="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout"/>
   <SubComponents>
     <Component class="javax.swing.JLabel" name="findLabel">
       <Properties>
-        <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
-          <ResourceString bundle="org/netbeans/modules/properties/Bundle.properties" key="LBL_Find" replaceFormat="FindPanel.getBundle().getString(&quot;{key}&quot;)"/>
-        </Property>
         <Property name="labelFor" type="java.awt.Component" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
           <Connection code="findCombo" type="code"/>
+        </Property>
+        <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
+          <ResourceString bundle="org/netbeans/modules/properties/Bundle.properties" key="LBL_Find" replaceFormat="getBundleString(&quot;{key}&quot;)"/>
         </Property>
       </Properties>
       <Constraints>
@@ -38,7 +38,7 @@
     <Component class="javax.swing.JButton" name="findButton">
       <Properties>
         <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
-          <ResourceString bundle="org/netbeans/modules/properties/Bundle.properties" key="CTL_Find" replaceFormat="FindPanel.getBundle().getString(&quot;{key}&quot;)"/>
+          <ResourceString bundle="org/netbeans/modules/properties/Bundle.properties" key="CTL_Find" replaceFormat="getBundleString(&quot;{key}&quot;)"/>
         </Property>
         <Property name="nextFocusableComponent" type="java.awt.Component" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
           <Connection component="cancelButton" type="bean"/>
@@ -53,7 +53,7 @@
     <Component class="javax.swing.JButton" name="cancelButton">
       <Properties>
         <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
-          <ResourceString bundle="org/netbeans/modules/properties/Bundle.properties" key="CTL_Cancel" replaceFormat="FindPanel.getBundle().getString(&quot;{key}&quot;)"/>
+          <ResourceString bundle="org/netbeans/modules/properties/Bundle.properties" key="CTL_Cancel" replaceFormat="getBundleString(&quot;{key}&quot;)"/>
         </Property>
         <Property name="nextFocusableComponent" type="java.awt.Component" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
           <Connection component="findCombo" type="bean"/>
@@ -68,10 +68,10 @@
     <Component class="javax.swing.JCheckBox" name="matchCaseCheck">
       <Properties>
         <Property name="mnemonic" type="int" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-          <Connection code="(FindPanel.getBundle().getString(&quot;CTL_MatchCaseCheck_Mnem&quot;)).charAt(0)" type="code"/>
+          <Connection code="(getBundleString(&quot;CTL_MatchCaseCheck_Mnem&quot;)).charAt(0)" type="code"/>
         </Property>
         <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
-          <ResourceString bundle="org/netbeans/modules/properties/Bundle.properties" key="CTL_MatchCaseCheck" replaceFormat="FindPanel.getBundle().getString(&quot;{key}&quot;)"/>
+          <ResourceString bundle="org/netbeans/modules/properties/Bundle.properties" key="CTL_MatchCaseCheck" replaceFormat="getBundleString(&quot;{key}&quot;)"/>
         </Property>
         <Property name="nextFocusableComponent" type="java.awt.Component" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
           <Connection component="backwardCheck" type="bean"/>
@@ -86,10 +86,10 @@
     <Component class="javax.swing.JCheckBox" name="backwardCheck">
       <Properties>
         <Property name="mnemonic" type="int" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-          <Connection code="(FindPanel.getBundle().getString(&quot;CTL_BackwardCheck_Mnem&quot;)).charAt(0)" type="code"/>
+          <Connection code="(getBundleString(&quot;CTL_BackwardCheck_Mnem&quot;)).charAt(0)" type="code"/>
         </Property>
         <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
-          <ResourceString bundle="org/netbeans/modules/properties/Bundle.properties" key="CTL_BackwardCheck" replaceFormat="FindPanel.getBundle().getString(&quot;{key}&quot;)"/>
+          <ResourceString bundle="org/netbeans/modules/properties/Bundle.properties" key="CTL_BackwardCheck" replaceFormat="getBundleString(&quot;{key}&quot;)"/>
         </Property>
         <Property name="nextFocusableComponent" type="java.awt.Component" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
           <Connection component="wrapCheck" type="bean"/>
@@ -104,10 +104,10 @@
     <Component class="javax.swing.JCheckBox" name="wrapCheck">
       <Properties>
         <Property name="mnemonic" type="int" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-          <Connection code="(FindPanel.getBundle().getString(&quot;CTL_WrapSearch_Mnem&quot;)).charAt(0)" type="code"/>
+          <Connection code="(getBundleString(&quot;CTL_WrapSearch_Mnem&quot;)).charAt(0)" type="code"/>
         </Property>
         <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
-          <ResourceString bundle="org/netbeans/modules/properties/Bundle.properties" key="CTL_WrapSearch" replaceFormat="FindPanel.getBundle().getString(&quot;{key}&quot;)"/>
+          <ResourceString bundle="org/netbeans/modules/properties/Bundle.properties" key="CTL_WrapSearch" replaceFormat="getBundleString(&quot;{key}&quot;)"/>
         </Property>
         <Property name="nextFocusableComponent" type="java.awt.Component" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
           <Connection component="rowCheck" type="bean"/>
@@ -122,10 +122,10 @@
     <Component class="javax.swing.JCheckBox" name="rowCheck">
       <Properties>
         <Property name="mnemonic" type="int" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-          <Connection code="(FindPanel.getBundle().getString(&quot;CTL_SearchByRows_Mnem&quot;)).charAt(0)" type="code"/>
+          <Connection code="(getBundleString(&quot;CTL_SearchByRows_Mnem&quot;)).charAt(0)" type="code"/>
         </Property>
         <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
-          <ResourceString bundle="org/netbeans/modules/properties/Bundle.properties" key="CTL_SearchByRows" replaceFormat="FindPanel.getBundle().getString(&quot;{key}&quot;)"/>
+          <ResourceString bundle="org/netbeans/modules/properties/Bundle.properties" key="CTL_SearchByRows" replaceFormat="getBundleString(&quot;{key}&quot;)"/>
         </Property>
         <Property name="nextFocusableComponent" type="java.awt.Component" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
           <Connection component="findButton" type="bean"/>
@@ -140,10 +140,10 @@
     <Component class="javax.swing.JCheckBox" name="highlightCheck">
       <Properties>
         <Property name="mnemonic" type="int" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-          <Connection code="(FindPanel.getBundle().getString(&quot;CTL_HighlightCheck_Mnem&quot;)).charAt(0)" type="code"/>
+          <Connection code="(getBundleString(&quot;CTL_HighlightCheck_Mnem&quot;)).charAt(0)" type="code"/>
         </Property>
         <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
-          <ResourceString bundle="org/netbeans/modules/properties/Bundle.properties" key="CTL_HighlightCheck" replaceFormat="FindPanel.getBundle().getString(&quot;{key}&quot;)"/>
+          <ResourceString bundle="org/netbeans/modules/properties/Bundle.properties" key="CTL_HighlightCheck" replaceFormat="getBundleString(&quot;{key}&quot;)"/>
         </Property>
         <Property name="nextFocusableComponent" type="java.awt.Component" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
           <Connection component="matchCaseCheck" type="bean"/>
